// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App loads asynchronously loads in the welcome screen asynchronously 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <title>
    AuthJazz
  </title>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Connection testing field
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      className="Button__Button-jkHDFw hKMOLu"
      onClick={[Function]}
    >
      Click to ping
    </button>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      HINT: the password is always password
    </p>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars Characters login
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Please log in
    </p>
    <form
      className="Form__Form-PASBS imuxEL"
      onSubmit={[Function]}
    >
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="Button__Button-jkHDFw jklsEJ"
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <iframe
    className="Iframe__Iframe-hXkCjZ HaLVb"
    height="500px"
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`App loads asynchronously starts of empty 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <title>
    AuthJazz
  </title>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      HINT: the password is always password
    </p>
  </div>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
</div>
`;

exports[`App start file Logs in users by token sent to method connectUser 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <title>
    AuthJazz
  </title>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Connection testing field
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      className="Button__Button-jkHDFw hKMOLu"
      onClick={[Function]}
    >
      Click to ping
    </button>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      HINT: the password is always password
    </p>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars user logged in!
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Here's some private information about you
    </p>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      You can log out and try another user by clicking the log out button
    </p>
    <button
      className="Button__Button-jkHDFw jHVgyi"
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars Characters user logged in!
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Here's some private information about you
    </p>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      You can log out and try another user by clicking the log out button
    </p>
    <button
      className="Button__Button-jkHDFw jHVgyi"
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <iframe
    className="Iframe__Iframe-hXkCjZ HaLVb"
    height="500px"
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`App start file Removes the welcome screen on logout 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <title>
    AuthJazz
  </title>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Connection testing field
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      className="Button__Button-jkHDFw hKMOLu"
      onClick={[Function]}
    >
      Click to ping
    </button>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      HINT: the password is always password
    </p>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars login
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Please log in
    </p>
    <form
      className="Form__Form-PASBS imuxEL"
      onSubmit={[Function]}
    >
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsusername"
          required={false}
        >
          Username
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarspassword"
          required={false}
        >
          Password
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="Button__Button-jkHDFw jklsEJ"
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars Characters login
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Please log in
    </p>
    <form
      className="Form__Form-PASBS imuxEL"
      onSubmit={[Function]}
    >
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="Button__Button-jkHDFw jklsEJ"
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <iframe
    className="Iframe__Iframe-hXkCjZ HaLVb"
    height="500px"
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`App start file Renders the welcome screen on login 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <title>
    AuthJazz
  </title>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Connection testing field
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      className="Button__Button-jkHDFw hKMOLu"
      onClick={[Function]}
    >
      Click to ping
    </button>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      HINT: the password is always password
    </p>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars user logged in!
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Here's some private information about you
    </p>
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <h2
        className="TitleH2__Title-keORPm jeYlWx"
      >
        Luke Skywalker
      </h2>
      <p
        className="Text__Text-jpiXUO hvuOVR"
      >
        Born: 
        19BBY
      </p>
      <p
        className="Text__Text-jpiXUO hvuOVR"
      >
        Your hair is 
        blond
      </p>
      <p
        className="Text__Text-jpiXUO hvuOVR"
      >
        Your eyes are 
        blue
      </p>
      <p
        className="Text__Text-jpiXUO hvuOVR"
      >
        Your gender is 
        male
      </p>
      <h1
        className="TitleH3__Title-dYKMyV ipbgyT"
      >
        Your homeworld
      </h1>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <p
          className="Text__Text-jpiXUO hvuOVR"
        >
          You're from 
          Tatooine
          ! Other people are also from there! Maybe you know them?
        </p>
        <p
          className="Text__Text-jpiXUO hvuOVR"
        >
          C-3PO, Darth Vader, Owen Lars, Beru Whitesun lars, R5-D4, Biggs Darklighter, Anakin Skywalker, Shmi Skywalker, Cliegg Lars
        </p>
      </div>
    </div>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      You can log out and try another user by clicking the log out button
    </p>
    <button
      className="Button__Button-jkHDFw jHVgyi"
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars Characters login
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Please log in
    </p>
    <form
      className="Form__Form-PASBS imuxEL"
      onSubmit={[Function]}
    >
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="Button__Button-jkHDFw jklsEJ"
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <iframe
    className="Iframe__Iframe-hXkCjZ HaLVb"
    height="500px"
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`App start file renders without crashing 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <title>
    AuthJazz
  </title>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Connection testing field
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      className="Button__Button-jkHDFw hKMOLu"
      onClick={[Function]}
    >
      Click to ping
    </button>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      HINT: the password is always password
    </p>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars login
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Please log in
    </p>
    <form
      className="Form__Form-PASBS imuxEL"
      onSubmit={[Function]}
    >
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsusername"
          required={false}
        >
          Username
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarspassword"
          required={false}
        >
          Password
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="Button__Button-jkHDFw jklsEJ"
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars Characters login
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Please log in
    </p>
    <form
      className="Form__Form-PASBS imuxEL"
      onSubmit={[Function]}
    >
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="Button__Button-jkHDFw jklsEJ"
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <iframe
    className="Iframe__Iframe-hXkCjZ HaLVb"
    height="500px"
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`IframeApp loads asynchronously loads in the welcome screen asynchronously 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
/>
`;

exports[`IframeApp loads asynchronously starts of empty 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
/>
`;

exports[`IframeApp start file Logs in users by token sent to method connectUser 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars user logged in inside iframe!
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Here's some private information about you
    </p>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      You can log out and try another user by clicking the log out button
    </p>
    <button
      className="Button__Button-jkHDFw jHVgyi"
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
</div>
`;

exports[`IframeApp start file Removes the welcome screen on logout 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars login terminal inside iframe
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Please log in
    </p>
    <form
      className="Form__Form-PASBS imuxEL"
      onSubmit={[Function]}
    >
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsusername"
          required={false}
        >
          Username
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarspassword"
          required={false}
        >
          Password
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="Button__Button-jkHDFw jklsEJ"
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
</div>
`;

exports[`IframeApp start file Renders the welcome screen on login 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars user logged in inside iframe!
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Here's some private information about you
    </p>
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <h2
        className="TitleH2__Title-keORPm jeYlWx"
      >
        Luke Skywalker
      </h2>
      <p
        className="Text__Text-jpiXUO hvuOVR"
      >
        Born: 
        19BBY
      </p>
      <p
        className="Text__Text-jpiXUO hvuOVR"
      >
        Your hair is 
        blond
      </p>
      <p
        className="Text__Text-jpiXUO hvuOVR"
      >
        Your eyes are 
        blue
      </p>
      <p
        className="Text__Text-jpiXUO hvuOVR"
      >
        Your gender is 
        male
      </p>
      <h1
        className="TitleH3__Title-dYKMyV ipbgyT"
      >
        Your homeworld
      </h1>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <p
          className="Text__Text-jpiXUO hvuOVR"
        >
          You're from 
          Tatooine
          ! Other people are also from there! Maybe you know them?
        </p>
        <p
          className="Text__Text-jpiXUO hvuOVR"
        >
          C-3PO, Darth Vader, Owen Lars, Beru Whitesun lars, R5-D4, Biggs Darklighter, Anakin Skywalker, Shmi Skywalker, Cliegg Lars
        </p>
      </div>
    </div>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      You can log out and try another user by clicking the log out button
    </p>
    <button
      className="Button__Button-jkHDFw jHVgyi"
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
</div>
`;

exports[`IframeApp start file renders without crashing 1`] = `
<div
  className="Wrapper__Wrapper-cZxMuO esaSay View__View-jelnfZ bnYeJt"
>
  <div
    className="View__View-jelnfZ bnYeJt"
  >
    <h1
      className="Title__Title-lbDhID gxinMP"
    >
      Star Wars login terminal inside iframe
    </h1>
    <p
      className="Text__Text-jpiXUO hvuOVR"
    >
      Please log in
    </p>
    <form
      className="Form__Form-PASBS imuxEL"
      onSubmit={[Function]}
    >
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarsusername"
          required={false}
        >
          Username
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarsusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div
        className="View__View-jelnfZ bnYeJt"
      >
        <label
          className="Label__Label-jsURsk iCwAoZ"
          htmlFor="StarWarspassword"
          required={false}
        >
          Password
        </label>
        <input
          className="TextInput__Text-jwTuSF bRSPUO"
          id="StarWarspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="Button__Button-jkHDFw jklsEJ"
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
</div>
`;
